k8s/ingresses/scope-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-scope
  namespace: weave
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - scope.acme.test
      secretName: scope-tls
  rules:
    - host: scope.acme.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weave-scope-app
                port:
                  number: 80
